fix some overflow behavior

--- a/contract_board/board/static/style.css
+++ b/contract_board/board/static/style.css
@@ -107,11 +107,16 @@ html {
   background-color: #05192d;
 }
 
+.beige-bg {
+  background-color: #fffbf3;
+}
+
 .card-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
   column-gap: 20px;
   row-gap: 20px;
+  
 }
 
 .errorlist {
@@ -121,6 +126,15 @@ html {
 .h-stack {
   display: inline-block;
   margin-right: 10px;
+}
+
+.logo-blue {
+  color: #06bdfc;
+}
+
+.logo-blue:hover,
+.logo-blue:focus {
+  background-color: rgb(0, 155, 216);
 }
 
 .overlay-container {
@@ -137,33 +151,12 @@ html {
   border-radius: var(--border-radius);
 }
 
-.remove-margin {
-  margin: 0px;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.purple-bg {
-  background-color: #7933ff;
-}
-
-.beige-bg {
-  background-color: #fffbf3;
-}
-
 .pad-section {
   padding: 20px 0 50px 0;
 }
 
-.logo-blue {
-  color: #06bdfc;
-}
-
-.logo-blue:hover,
-.logo-blue:focus {
-  background-color: rgb(0, 155, 216);
+.remove-margin {
+  margin: 0px;
 }
 
 .right {
@@ -171,4 +164,8 @@ html {
   justify-content: flex-end;
   margin-left: auto;
   margin-right: 0;
+}
+
+.text-center {
+  text-align: center;
 }
